fix: moved sidebar animation inline #3731 and fixed wrap

--- a/assets/scss/components/hfg/frontend/layout/_mobile_sidebar.scss
+++ b/assets/scss/components/hfg/frontend/layout/_mobile_sidebar.scss
@@ -139,63 +139,6 @@
 	}
 }
 
-/* Showing Menu Sidebar animation. */
-.is-menu-sidebar {
-
-	.header-menu-sidebar {
-		visibility: visible;
-	}
-
-	&.menu_sidebar_slide_left {
-
-		.header-menu-sidebar {
-			transform: translate3d(0, 0, 0);
-			left: 0;
-		}
-	}
-
-	&.menu_sidebar_slide_right {
-
-		.header-menu-sidebar {
-			transform: translate3d(0, 0, 0);
-			right: 0;
-		}
-	}
-
-	&.menu_sidebar_pull_left {
-
-		.header-menu-sidebar {
-			transform: translateX(0);
-		}
-	}
-
-	&.menu_sidebar_pull_right {
-
-		.header-menu-sidebar {
-			transform: translateX(0);
-		}
-	}
-
-	&.menu_sidebar_dropdown {
-
-		.header-menu-sidebar {
-			height: auto;
-		}
-
-		.header-menu-sidebar-inner {
-			max-height: 400px;
-			padding: 20px 0;
-		}
-	}
-
-	&.menu_sidebar_full_canvas {
-
-		.header-menu-sidebar {
-			opacity: 1;
-		}
-	}
-}
-
 .header-menu-sidebar .menu-item-nav-search {
 	display: flex;
 	align-items: center;
